Practice1/y.output
Terminals unused in grammar

   PLUSEQ
   DEC
   DEF


Grammar

    0 $accept: start $end

    1 start: PREPROCESS start
    2      | FunDec ';' start
    3      | FunDef start
    4      | VarDec ';' start
    5      | %empty

    6 FunDec: DataType IDENTIFIER OpenParan ParamList CloseParan
    7       | DataType IDENTIFIER '(' ')'

    8 FunDef: DataType IDENTIFIER OpenParan ParamList CloseParan BlockStat
    9       | DataType IDENTIFIER '(' ')' BlockStat

   10 OpenParan: '('

   11 CloseParan: ')'

   12 DataType: VOID
   13         | INT
   14         | CHAR
   15         | FLOAT

   16 ParamList: DataType IDENTIFIER ',' ParamList
   17          | DataType IDENTIFIER

   18 VarDec: DataType VarList

   19 VarList: IDENTIFIER
   20        | IDENTIFIER ',' VarList
   21        | IDENTIFIER '[' ConstExpr ']'
   22        | IDENTIFIER '[' ConstExpr ']' ',' VarList
   23        | IDENTIFIER '=' Expr

   24 FunCall: IDENTIFIER '(' ArgList ')'
   25        | IDENTIFIER '(' ')'

   26 ReturnStat: RETURN
   27           | RETURN Expr

   28 ArgList: Expr ',' ArgList
   29        | STRING_CONSTANT ',' ArgList
   30        | Expr
   31        | STRING_CONSTANT

   32 StatType: SingleStat StatType
   33         | BlockStat StatType
   34         | %empty

   35 SingleStat: ';'
   36           | Expr ';'
   37           | ReturnStat ';'
   38           | VarDec ';'
   39           | IfStat
   40           | WhileStat
   41           | ForStat
   42           | BREAK ';'
   43           | CONTINUE ';'

   44 $@1: %empty

   45 BlockStat: '{' $@1 StatType '}'

   46 ConstExpr: INTEGER_CONSTANT
   47          | ConstExpr '+' ConstExpr
   48          | ConstExpr '-' ConstExpr
   49          | ConstExpr '*' ConstExpr
   50          | ConstExpr '/' ConstExpr
   51          | ConstExpr '%' ConstExpr
   52          | '(' ConstExpr ')'

   53 Expr: Term
   54     | Expr '+' Expr
   55     | Expr '-' Expr
   56     | Expr '/' Expr
   57     | Expr '*' Expr
   58     | Expr '%' Expr
   59     | Expr '<' Expr
   60     | Expr '>' Expr
   61     | Expr '=' Expr
   62     | '(' Expr ')'

   63 Term: INTEGER_CONSTANT
   64     | IDENTIFIER
   65     | IDENTIFIER '[' ConstExpr ']'
   66     | INCREMENT IDENTIFIER
   67     | DECREMENT IDENTIFIER
   68     | IDENTIFIER INCREMENT
   69     | IDENTIFIER DECREMENT
   70     | FunCall

   71 IfStat: IF '(' Expr ')' SingleStat
   72       | IF '(' Expr ')' BlockStat
   73       | IF '(' Expr ')' SingleStat ELSE BlockStat
   74       | IF '(' Expr ')' BlockStat ELSE BlockStat
   75       | IF '(' Expr ')' BlockStat ELSE SingleStat
   76       | IF '(' Expr ')' SingleStat ELSE SingleStat

   77 ForStat: FOR '(' VarDec ';' Expr ';' Expr ')' BlockStat
   78        | FOR '(' Expr ';' Expr ';' Expr ')' BlockStat

   79 WhileStat: WHILE '(' Expr ')' BlockStat


Terminals, with rules where they appear

$end (0) 0
'%' (37) 51 58
'(' (40) 7 9 10 24 25 52 62 71 72 73 74 75 76 77 78 79
')' (41) 7 9 11 24 25 52 62 71 72 73 74 75 76 77 78 79
'*' (42) 49 57
'+' (43) 47 54
',' (44) 16 20 22 28 29
'-' (45) 48 55
'/' (47) 50 56
';' (59) 2 4 35 36 37 38 42 43 77 78
'<' (60) 59
'=' (61) 23 61
'>' (62) 60
'[' (91) 21 22 65
']' (93) 21 22 65
'{' (123) 45
'}' (125) 45
error (256)
INT (258) 13
FLOAT (259) 15
WHILE (260) 79
FOR (261) 77 78
IF (262) 71 72 73 74 75 76
ELSE (263) 73 74 75 76
CHAR (264) 14
VOID (265) 12
RETURN (266) 26 27
BREAK (267) 42
CONTINUE (268) 43
INTEGER_CONSTANT (269) 46 63
IDENTIFIER (270) 6 7 8 9 16 17 19 20 21 22 23 24 25 64 65 66 67 68
    69
STRING_CONSTANT (271) 29 31
INCREMENT (272) 66 68
DECREMENT (273) 67 69
PLUSEQ (274)
PREPROCESS (275) 1
DEC (276)
DEF (277)
IFX (278)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1 2 3 4 5, on right: 0 1 2 3 4
FunDec (42)
    on left: 6 7, on right: 2
FunDef (43)
    on left: 8 9, on right: 3
OpenParan (44)
    on left: 10, on right: 6 8
CloseParan (45)
    on left: 11, on right: 6 8
DataType (46)
    on left: 12 13 14 15, on right: 6 7 8 9 16 17 18
ParamList (47)
    on left: 16 17, on right: 6 8 16
VarDec (48)
    on left: 18, on right: 4 38 77
VarList (49)
    on left: 19 20 21 22 23, on right: 18 20 22
FunCall (50)
    on left: 24 25, on right: 70
ReturnStat (51)
    on left: 26 27, on right: 37
ArgList (52)
    on left: 28 29 30 31, on right: 24 28 29
StatType (53)
    on left: 32 33 34, on right: 32 33 45
SingleStat (54)
    on left: 35 36 37 38 39 40 41 42 43, on right: 32 71 73 75 76
BlockStat (55)
    on left: 45, on right: 8 9 33 72 73 74 75 77 78 79
$@1 (56)
    on left: 44, on right: 45
ConstExpr (57)
    on left: 46 47 48 49 50 51 52, on right: 21 22 47 48 49 50 51 52
    65
Expr (58)
    on left: 53 54 55 56 57 58 59 60 61 62, on right: 23 27 28 30 36
    54 55 56 57 58 59 60 61 62 71 72 73 74 75 76 77 78 79
Term (59)
    on left: 63 64 65 66 67 68 69 70, on right: 53
IfStat (60)
    on left: 71 72 73 74 75 76, on right: 39
ForStat (61)
    on left: 77 78, on right: 41
WhileStat (62)
    on left: 79, on right: 40


State 0

    0 $accept: . start $end

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    VOID        shift, and go to state 4
    PREPROCESS  shift, and go to state 5

    $default  reduce using rule 5 (start)

    start     go to state 6
    FunDec    go to state 7
    FunDef    go to state 8
    DataType  go to state 9
    VarDec    go to state 10


State 1

   13 DataType: INT .

    $default  reduce using rule 13 (DataType)


State 2

   15 DataType: FLOAT .

    $default  reduce using rule 15 (DataType)


State 3

   14 DataType: CHAR .

    $default  reduce using rule 14 (DataType)


State 4

   12 DataType: VOID .

    $default  reduce using rule 12 (DataType)


State 5

    1 start: PREPROCESS . start

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    VOID        shift, and go to state 4
    PREPROCESS  shift, and go to state 5

    $default  reduce using rule 5 (start)

    start     go to state 11
    FunDec    go to state 7
    FunDef    go to state 8
    DataType  go to state 9
    VarDec    go to state 10


State 6

    0 $accept: start . $end

    $end  shift, and go to state 12


State 7

    2 start: FunDec . ';' start

    ';'  shift, and go to state 13


State 8

    3 start: FunDef . start

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    VOID        shift, and go to state 4
    PREPROCESS  shift, and go to state 5

    $default  reduce using rule 5 (start)

    start     go to state 14
    FunDec    go to state 7
    FunDef    go to state 8
    DataType  go to state 9
    VarDec    go to state 10


State 9

    6 FunDec: DataType . IDENTIFIER OpenParan ParamList CloseParan
    7       | DataType . IDENTIFIER '(' ')'
    8 FunDef: DataType . IDENTIFIER OpenParan ParamList CloseParan BlockStat
    9       | DataType . IDENTIFIER '(' ')' BlockStat
   18 VarDec: DataType . VarList

    IDENTIFIER  shift, and go to state 15

    VarList  go to state 16


State 10

    4 start: VarDec . ';' start

    ';'  shift, and go to state 17


State 11

    1 start: PREPROCESS start .

    $default  reduce using rule 1 (start)


State 12

    0 $accept: start $end .

    $default  accept


State 13

    2 start: FunDec ';' . start

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    VOID        shift, and go to state 4
    PREPROCESS  shift, and go to state 5

    $default  reduce using rule 5 (start)

    start     go to state 18
    FunDec    go to state 7
    FunDef    go to state 8
    DataType  go to state 9
    VarDec    go to state 10


State 14

    3 start: FunDef start .

    $default  reduce using rule 3 (start)


State 15

    6 FunDec: DataType IDENTIFIER . OpenParan ParamList CloseParan
    7       | DataType IDENTIFIER . '(' ')'
    8 FunDef: DataType IDENTIFIER . OpenParan ParamList CloseParan BlockStat
    9       | DataType IDENTIFIER . '(' ')' BlockStat
   19 VarList: IDENTIFIER .
   20        | IDENTIFIER . ',' VarList
   21        | IDENTIFIER . '[' ConstExpr ']'
   22        | IDENTIFIER . '[' ConstExpr ']' ',' VarList
   23        | IDENTIFIER . '=' Expr

    '='  shift, and go to state 19
    '('  shift, and go to state 20
    ','  shift, and go to state 21
    '['  shift, and go to state 22

    $default  reduce using rule 19 (VarList)

    OpenParan  go to state 23


State 16

   18 VarDec: DataType VarList .

    $default  reduce using rule 18 (VarDec)


State 17

    4 start: VarDec ';' . start

    INT         shift, and go to state 1
    FLOAT       shift, and go to state 2
    CHAR        shift, and go to state 3
    VOID        shift, and go to state 4
    PREPROCESS  shift, and go to state 5

    $default  reduce using rule 5 (start)

    start     go to state 24
    FunDec    go to state 7
    FunDef    go to state 8
    DataType  go to state 9
    VarDec    go to state 10


State 18

    2 start: FunDec ';' start .

    $default  reduce using rule 2 (start)


State 19

   23 VarList: IDENTIFIER '=' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 31
    Term     go to state 32


State 20

    7 FunDec: DataType IDENTIFIER '(' . ')'
    9 FunDef: DataType IDENTIFIER '(' . ')' BlockStat
   10 OpenParan: '(' .

    ')'  shift, and go to state 33

    $default  reduce using rule 10 (OpenParan)


State 21

   20 VarList: IDENTIFIER ',' . VarList

    IDENTIFIER  shift, and go to state 34

    VarList  go to state 35


State 22

   21 VarList: IDENTIFIER '[' . ConstExpr ']'
   22        | IDENTIFIER '[' . ConstExpr ']' ',' VarList

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 38


State 23

    6 FunDec: DataType IDENTIFIER OpenParan . ParamList CloseParan
    8 FunDef: DataType IDENTIFIER OpenParan . ParamList CloseParan BlockStat

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    CHAR   shift, and go to state 3
    VOID   shift, and go to state 4

    DataType   go to state 39
    ParamList  go to state 40


State 24

    4 start: VarDec ';' start .

    $default  reduce using rule 4 (start)


State 25

   63 Term: INTEGER_CONSTANT .

    $default  reduce using rule 63 (Term)


State 26

   24 FunCall: IDENTIFIER . '(' ArgList ')'
   25        | IDENTIFIER . '(' ')'
   64 Term: IDENTIFIER .
   65     | IDENTIFIER . '[' ConstExpr ']'
   68     | IDENTIFIER . INCREMENT
   69     | IDENTIFIER . DECREMENT

    INCREMENT  shift, and go to state 41
    DECREMENT  shift, and go to state 42
    '('        shift, and go to state 43
    '['        shift, and go to state 44

    $default  reduce using rule 64 (Term)


State 27

   66 Term: INCREMENT . IDENTIFIER

    IDENTIFIER  shift, and go to state 45


State 28

   67 Term: DECREMENT . IDENTIFIER

    IDENTIFIER  shift, and go to state 46


State 29

   62 Expr: '(' . Expr ')'

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 47
    Term     go to state 32


State 30

   70 Term: FunCall .

    $default  reduce using rule 70 (Term)


State 31

   23 VarList: IDENTIFIER '=' Expr .
   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    '='  shift, and go to state 48
    '<'  shift, and go to state 49
    '>'  shift, and go to state 50
    '+'  shift, and go to state 51
    '-'  shift, and go to state 52
    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55

    $default  reduce using rule 23 (VarList)


State 32

   53 Expr: Term .

    $default  reduce using rule 53 (Expr)


State 33

    7 FunDec: DataType IDENTIFIER '(' ')' .
    9 FunDef: DataType IDENTIFIER '(' ')' . BlockStat

    '{'  shift, and go to state 56

    $default  reduce using rule 7 (FunDec)

    BlockStat  go to state 57


State 34

   19 VarList: IDENTIFIER .
   20        | IDENTIFIER . ',' VarList
   21        | IDENTIFIER . '[' ConstExpr ']'
   22        | IDENTIFIER . '[' ConstExpr ']' ',' VarList
   23        | IDENTIFIER . '=' Expr

    '='  shift, and go to state 19
    ','  shift, and go to state 21
    '['  shift, and go to state 22

    $default  reduce using rule 19 (VarList)


State 35

   20 VarList: IDENTIFIER ',' VarList .

    $default  reduce using rule 20 (VarList)


State 36

   46 ConstExpr: INTEGER_CONSTANT .

    $default  reduce using rule 46 (ConstExpr)


State 37

   52 ConstExpr: '(' . ConstExpr ')'

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 58


State 38

   21 VarList: IDENTIFIER '[' ConstExpr . ']'
   22        | IDENTIFIER '[' ConstExpr . ']' ',' VarList
   47 ConstExpr: ConstExpr . '+' ConstExpr
   48          | ConstExpr . '-' ConstExpr
   49          | ConstExpr . '*' ConstExpr
   50          | ConstExpr . '/' ConstExpr
   51          | ConstExpr . '%' ConstExpr

    '+'  shift, and go to state 59
    '-'  shift, and go to state 60
    '/'  shift, and go to state 61
    '*'  shift, and go to state 62
    '%'  shift, and go to state 63
    ']'  shift, and go to state 64


State 39

   16 ParamList: DataType . IDENTIFIER ',' ParamList
   17          | DataType . IDENTIFIER

    IDENTIFIER  shift, and go to state 65


State 40

    6 FunDec: DataType IDENTIFIER OpenParan ParamList . CloseParan
    8 FunDef: DataType IDENTIFIER OpenParan ParamList . CloseParan BlockStat

    ')'  shift, and go to state 66

    CloseParan  go to state 67


State 41

   68 Term: IDENTIFIER INCREMENT .

    $default  reduce using rule 68 (Term)


State 42

   69 Term: IDENTIFIER DECREMENT .

    $default  reduce using rule 69 (Term)


State 43

   24 FunCall: IDENTIFIER '(' . ArgList ')'
   25        | IDENTIFIER '(' . ')'

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    STRING_CONSTANT   shift, and go to state 68
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29
    ')'               shift, and go to state 69

    FunCall  go to state 30
    ArgList  go to state 70
    Expr     go to state 71
    Term     go to state 32


State 44

   65 Term: IDENTIFIER '[' . ConstExpr ']'

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 72


State 45

   66 Term: INCREMENT IDENTIFIER .

    $default  reduce using rule 66 (Term)


State 46

   67 Term: DECREMENT IDENTIFIER .

    $default  reduce using rule 67 (Term)


State 47

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr
   62     | '(' Expr . ')'

    '='  shift, and go to state 48
    '<'  shift, and go to state 49
    '>'  shift, and go to state 50
    '+'  shift, and go to state 51
    '-'  shift, and go to state 52
    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55
    ')'  shift, and go to state 73


State 48

   61 Expr: Expr '=' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 74
    Term     go to state 32


State 49

   59 Expr: Expr '<' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 75
    Term     go to state 32


State 50

   60 Expr: Expr '>' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 76
    Term     go to state 32


State 51

   54 Expr: Expr '+' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 77
    Term     go to state 32


State 52

   55 Expr: Expr '-' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 78
    Term     go to state 32


State 53

   56 Expr: Expr '/' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 79
    Term     go to state 32


State 54

   57 Expr: Expr '*' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 80
    Term     go to state 32


State 55

   58 Expr: Expr '%' . Expr

    INTEGER_CONSTANT  shift, and go to state 25
    IDENTIFIER        shift, and go to state 26
    INCREMENT         shift, and go to state 27
    DECREMENT         shift, and go to state 28
    '('               shift, and go to state 29

    FunCall  go to state 30
    Expr     go to state 81
    Term     go to state 32


State 56

   45 BlockStat: '{' . $@1 StatType '}'

    $default  reduce using rule 44 ($@1)

    $@1  go to state 82


State 57

    9 FunDef: DataType IDENTIFIER '(' ')' BlockStat .

    $default  reduce using rule 9 (FunDef)


State 58

   47 ConstExpr: ConstExpr . '+' ConstExpr
   48          | ConstExpr . '-' ConstExpr
   49          | ConstExpr . '*' ConstExpr
   50          | ConstExpr . '/' ConstExpr
   51          | ConstExpr . '%' ConstExpr
   52          | '(' ConstExpr . ')'

    '+'  shift, and go to state 59
    '-'  shift, and go to state 60
    '/'  shift, and go to state 61
    '*'  shift, and go to state 62
    '%'  shift, and go to state 63
    ')'  shift, and go to state 83


State 59

   47 ConstExpr: ConstExpr '+' . ConstExpr

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 84


State 60

   48 ConstExpr: ConstExpr '-' . ConstExpr

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 85


State 61

   50 ConstExpr: ConstExpr '/' . ConstExpr

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 86


State 62

   49 ConstExpr: ConstExpr '*' . ConstExpr

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 87


State 63

   51 ConstExpr: ConstExpr '%' . ConstExpr

    INTEGER_CONSTANT  shift, and go to state 36
    '('               shift, and go to state 37

    ConstExpr  go to state 88


State 64

   21 VarList: IDENTIFIER '[' ConstExpr ']' .
   22        | IDENTIFIER '[' ConstExpr ']' . ',' VarList

    ','  shift, and go to state 89

    $default  reduce using rule 21 (VarList)


State 65

   16 ParamList: DataType IDENTIFIER . ',' ParamList
   17          | DataType IDENTIFIER .

    ','  shift, and go to state 90

    $default  reduce using rule 17 (ParamList)


State 66

   11 CloseParan: ')' .

    $default  reduce using rule 11 (CloseParan)


State 67

    6 FunDec: DataType IDENTIFIER OpenParan ParamList CloseParan .
    8 FunDef: DataType IDENTIFIER OpenParan ParamList CloseParan . BlockStat

    '{'  shift, and go to state 56

    $default  reduce using rule 6 (FunDec)

    BlockStat  go to state 91


State 68

   29 ArgList: STRING_CONSTANT . ',' ArgList
   31        | STRING_CONSTANT .

    ','  shift, and go to state 92

    $default  reduce using rule 31 (ArgList)


State 69

   25 FunCall: IDENTIFIER '(' ')' .

    $default  reduce using rule 25 (FunCall)


State 70

   24 FunCall: IDENTIFIER '(' ArgList . ')'

    ')'  shift, and go to state 93


State 71

   28 ArgList: Expr . ',' ArgList
   30        | Expr .
   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    '='  shift, and go to state 48
    '<'  shift, and go to state 49
    '>'  shift, and go to state 50
    '+'  shift, and go to state 51
    '-'  shift, and go to state 52
    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55
    ','  shift, and go to state 94

    $default  reduce using rule 30 (ArgList)


State 72

   47 ConstExpr: ConstExpr . '+' ConstExpr
   48          | ConstExpr . '-' ConstExpr
   49          | ConstExpr . '*' ConstExpr
   50          | ConstExpr . '/' ConstExpr
   51          | ConstExpr . '%' ConstExpr
   65 Term: IDENTIFIER '[' ConstExpr . ']'

    '+'  shift, and go to state 59
    '-'  shift, and go to state 60
    '/'  shift, and go to state 61
    '*'  shift, and go to state 62
    '%'  shift, and go to state 63
    ']'  shift, and go to state 95


State 73

   62 Expr: '(' Expr ')' .

    $default  reduce using rule 62 (Expr)


State 74

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr
   61     | Expr '=' Expr .

    '<'  shift, and go to state 49
    '>'  shift, and go to state 50
    '+'  shift, and go to state 51
    '-'  shift, and go to state 52
    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55

    $default  reduce using rule 61 (Expr)


State 75

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   59     | Expr '<' Expr .
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    '+'  shift, and go to state 51
    '-'  shift, and go to state 52
    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55

    $default  reduce using rule 59 (Expr)


State 76

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   60     | Expr '>' Expr .
   61     | Expr . '=' Expr

    '+'  shift, and go to state 51
    '-'  shift, and go to state 52
    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55

    $default  reduce using rule 60 (Expr)


State 77

   54 Expr: Expr . '+' Expr
   54     | Expr '+' Expr .
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55

    $default  reduce using rule 54 (Expr)


State 78

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   55     | Expr '-' Expr .
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    '/'  shift, and go to state 53
    '*'  shift, and go to state 54
    '%'  shift, and go to state 55

    $default  reduce using rule 55 (Expr)


State 79

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   56     | Expr '/' Expr .
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    $default  reduce using rule 56 (Expr)


State 80

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   57     | Expr '*' Expr .
   58     | Expr . '%' Expr
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    $default  reduce using rule 57 (Expr)


State 81

   54 Expr: Expr . '+' Expr
   55     | Expr . '-' Expr
   56     | Expr . '/' Expr
   57     | Expr . '*' Expr
   58     | Expr . '%' Expr
   58     | Expr '%' Expr .
   59     | Expr . '<' Expr
   60     | Expr . '>' Expr
   61     | Expr . '=' Expr

    $default  reduce using rule 58 (Expr)


State 82

   45 BlockStat: '{' $@1 . StatType '}'
